# automation-script

./: README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: base_module.py  buy_min_module.py  buy_module.py  buy_more_module.py  main.py  min_module.py  reset_module.py  run_buy.py  run_sell.py  sell_module.py  sell_profit_module.py  sell_reset_module.py  utils.py
