[project]
name = "upwork-automation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FrankHuang", email = "pingrunhuang@gmail.com"},
    {name = "pingrunhuang", email = "pingrunhuang@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "colorama>=0.4.6",
    "pyyaml>=6.0.1",
    "python-binance>=1.0.19",
    "pywin32>=306",
    "xlwings>=0.31.10",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
distribution = false
